RESOLVED FIXED288186
[Unified PDF] Zoom not working in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=288186
Summary [Unified PDF] Zoom not working in WKWebView
Tim Horton
Reported 2025-02-21 00:02:38 PST
[Unified PDF] Zoom not working in WKWebView
Attachments
Tim Horton
Comment 1 2025-02-21 00:02:39 PST
Tim Horton
Comment 2 2025-02-21 00:08:16 PST
EWS
Comment 3 2025-02-21 02:08:16 PST
Committed 290779@main (a30c570b4fcb): <https://commits.webkit.org/290779@main> Reviewed commits have been landed. Closing PR #41049 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.